@@ -1,3 +1,7 @@
+2009-03-01  Christian Persch  <chpe@gnome.org>
+
+	* m4/gecko.m4: Fix libxul[-embedding] detection.
+
 2009-02-25  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* src/yelp-base.c (yelp_base_init):
